--- a/web/index.html
+++ b/web/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 <head>
-<!-- remove this meta tag to disable auto redirect from the landing page -->
-<meta http-equiv="refresh" content="0; URL='sorting-algorithms-d3'" />
+<!-- uncomment this meta tag to auto redirect from the landing page -->
+<!-- <meta http-equiv="refresh" content="0; URL='sorting-algorithms-d3'" /> -->
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 <meta charset="utf-8">
