--- a/web/sorting-algorithms-d3.html
+++ b/web/sorting-algorithms-d3.html
@@ -74,8 +74,8 @@
         crossorigin="anonymous"></script> -->
 
     <!-- <script src="jquery-1.11.2.min.js"></script> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="d3.min.js" charset="utf-8"></script>
+    <script src="jquery-3.5.1.min.js"></script>
+    <script src="d3-5.16.0.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="sorting-algorithms-d3.js"></script>
 
 </body>
