--- a/web/sorting-algorithms-d3.html
+++ b/web/sorting-algorithms-d3.html
@@ -37,20 +37,14 @@
         </p>
     </div>
 
+    <!-- Buttons -->
+    <button onclick="emp.SortArrayRedraw()">Sort Array</button>
+    <button onclick="emp.ShuffleArrayRedraw()">Shuffle Array</button>
 
     <!-- D3 divs -->
     <div class="row" style="padding: 20px;">
-        <!-- Using the macro -->
-        <div class="col-s-12 col-md-6">
-            <div class="card">
-                <h5 class="card-header"> D3 Div Using Macro! </h5>
-                <!-- Here is where C++ code comes in -->
-                <div id="emp_d3"></div>
-            </div>
-        </div>
-
         <!-- Using the wrapper -->
-        <div class="col-s-12 col-md-6">
+        <div class="col-s-12 col-md-12">
             <div class="card">
                 <h5 class="card-header"> D3 Div Using Wrapper! </h5>
                 <!-- Here is where C++ code comes in -->
@@ -59,21 +53,6 @@
         </div>
     </div>
 
-    <!-- <div class="container">
-        <div id="emp_base"></div>
-        <div id="emp_d3"></div>
-    </div> -->
-
-
-
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
-        integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
-        integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
-        crossorigin="anonymous"></script> -->
-
-    <!-- <script src="jquery-1.11.2.min.js"></script> -->
     <script src="jquery-3.5.1.min.js"></script>
     <script src="d3-5.16.0.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="sorting-algorithms-d3.js"></script>
