--- a/web/sorting-algorithms-d3.html
+++ b/web/sorting-algorithms-d3.html
@@ -37,22 +37,26 @@
         </p>
     </div>
 
-    <!-- Buttons -->
-    <button onclick="emp.BubbleSortButton()">Bubble Sort</button>
-    <button onclick="emp.ShuffleArrayButton()">Shuffle Array</button>
-
-    <!-- D3 divs -->
+    <!-- D3 Code -->
     <div class="row" style="padding: 20px;">
         <!-- Using the wrapper -->
-        <div class="col-s-12 col-md-12">
+        <div class="col-s-12 col-md-10">
             <div class="card">
                 <h5 class="card-header"> Sort me! </h5>
                 <!-- Here is where C++ code comes in -->
                 <div id="emp_d3_wrapper"></div>
             </div>
         </div>
+        <div class="col-s-12 col-md-2">
+            <div class="card">
+                <h5 class="card-header"> Buttons! </h5>
+                <button onclick="emp.BubbleSortButton()">Bubble Sort</button>
+                <button onclick="emp.ShuffleArrayButton()">Shuffle</button>
+            </div>
+        </div>
     </div>
 
+    <!-- Scripts -->
     <script src="jquery-3.5.1.min.js"></script>
     <script src="d3-5.16.0.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="sorting-algorithms-d3.js"></script>
