--- a/web/index.html
+++ b/web/index.html
@@ -1,39 +1,66 @@
 <!doctype html>
 <html>
+
 <head>
-<!-- uncomment this meta tag to auto redirect from the landing page -->
-<!-- <meta http-equiv="refresh" content="0; URL='sorting-algorithms-d3'" /> -->
-
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-<meta charset="utf-8">
-<title>Landing Page for sorting-algorithms-d3</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
+    <title>Sorting Algorithms D3</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
+        integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
 </head>
+
 <body>
+    <!-- GitHub corner -->
+    <svg width="80" height="80" viewBox="0 0 250 250"
+        style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
+        <a href="https://github.com/Oliver-BE/sorting-algorithms-d3" target="_blank" class="github-corner"
+            aria-label="View source on Github">
+            <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
+            <path style="fill:white;"
+                d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
+                style="transform-origin: 130px 106px;" class="octo-arm"></path>
+            <path style="fill:white;"
+                d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
+                class="octo-body"></path>
+        </a>
+    </svg>
 
-<div class="jumbotron" style="padding-top: 2rem; padding-bottom: 1rem">
-<h1 class="display-4">Landing Page for sorting-algorithms-d3</h1>
-</div>
+    <!-- Page header -->
+    <div class="jumbotron" style="padding-top: 2rem; padding-bottom: 1rem; margin-bottom: 0">
+        <h1 class="display-4">Sorting Algorithms D3</h1>
+        <p class="lead">source: <a
+                href="https://github.com/Oliver-BE/sorting-algorithms-d3">github.com/Oliver-BE/sorting-algorithms-d3</a>
+        </p>
+    </div>
 
-<div class="container">
-  <div class="row">
-     <div class="col">
-       <div class="card">
-         <div class="card-body">
-           This project utilizes the Empirical D3 wrapper to create visualizations of different sorting algorithms
-         </div>
-       </div>
-       <div class="card">
-         <div class="card-body">
-           <a href="sorting-algorithms-d3" role="button" class="btn btn-secondary btn-lg btn-block">go!</a>
-           <a href="https://github.com/Oliver-BE/sorting-algorithms-d3" role="button" class="btn btn-secondary btn-lg btn-block">source</a>
-         </div>
-       </div>
-     </div>
-   </div>
-</div>
+    <!-- D3 Code -->
+    <div class="row" style="padding: 20px;">
+        <!-- Using the wrapper -->
+        <div class="col-s-12 col-md-10">
+            <div class="card">
+                <h5 class="card-header"> Sort me! </h5>
+                <!-- Here is where C++ code comes in -->
+                <div id="emp_d3_wrapper"></div>
+            </div>
+        </div>
+        <div class="col-s-12 col-md-2">
+            <div class="card">
+                <h5 class="card-header"> Buttons! </h5>
+                <button onclick="emp.BubbleSortButton()">Bubble Sort</button>
+                <button onclick="emp.ShuffleArrayButton()">Shuffle</button>
+            </div>
+        </div>
+    </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <!-- Scripts -->
+    <script src="jquery-3.5.1.min.js"></script>
+    <script src="d3-5.16.0.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="sorting-algorithms-d3.js"></script>
 
 </body>
+
 </html>
