--- a/web/index.html
+++ b/web/index.html
@@ -33,51 +33,55 @@
     </svg>
 
     <!-- Page header -->
-    <div class="jumbotron pb-1 pt-4 rounded-0">
-        <h1 class="display-4">Visualizing Sorting Algorithms with D3</h1>
-        <p class="lead">Using <a href="https://github.com/devosoft/Empirical">Empirical's</a> D3-wrapper
-        </p>
+    <div class="jumbotron pb-1 pt-4 mb-4 rounded-0">
+        <h1 class="display-4">Visualizing Sorting Algorithms</h1>
+        <hr class="my-4">
+        <p>Created by <a href="https://github.com/Oliver-BE" target="_blank">Oliver Baldwin Edwards
+            </a>using <a href="https://github.com/devosoft/Empirical" target="_blank">Empirical's</a> D3-wrapper </p>
     </div>
 
     <!-- Main content -->
     <div class="container-fluid">
+
         <!-- Row 1 -->
         <div class="row mb-2">
-            <div class="col">
+            <!-- Bar chart -->
+            <div class="col-s-12 col-md-9">
                 <div class="card">
-                    <!-- Card heading -->
-                    <h5 class="card-header"><i class="fas fa-question-circle"></i> What is this? </h5>
+                    <h4 class="card-header"><i class="fas fa-chart-bar"></i> Sort me! </h4>
+                    <!-- Here is where C++ code comes in -->
+                    <div id="emp_d3_wrapper"></div>
+                </div>
+            </div>
+            <!-- Buttons -->
+            <div class="col-s-12 col-md-3">
+                <div class="card">
+                    <h4 class="card-header"><i class="fas fa-cog"></i> Buttons! </h4>
+                    <div id="buttons_div" class="p-2">
+                        <button type="button" class="btn btn-primary btn-lg btn-block" style="margin-top: 10px;"
+                            onclick="emp.BubbleSortButton()">Bubble
+                            Sort</button>
+                        <button type="button" class="btn btn-dark btn-lg btn-block" style="margin-bottom: 10px;"
+                            onclick="emp.ShuffleArrayButton()">Shuffle</button>
+                    </div>
                 </div>
             </div>
         </div>
 
         <!-- Row 2 -->
         <div class="row mb-2">
-            <!-- Using the wrapper -->
-            <div class="col-s-12 col-md-9">
+            <div class="col">
                 <div class="card">
-                    <h5 class="card-header"><i class="fas fa-chart-bar"></i> Sort me! </h5>
-                    <!-- Here is where C++ code comes in -->
-                    <div id="emp_d3_wrapper"></div>
-                </div>
-            </div>
-            <div class="col-s-12 col-md-3">
-                <div class="card p-2">
-                    <h5 class="card-header"><i class="fas fa-cog"></i> Buttons! </h5>
-                    <button type="button" class="btn btn-primary btn-lg btn-block" style="margin-top: 10px;"
-                        onclick="emp.BubbleSortButton()">Bubble
-                        Sort</button>
-                    <button type="button" class="btn btn-dark btn-lg btn-block" style="margin-bottom: 10px;"
-                        onclick="emp.ShuffleArrayButton()">Shuffle</button>
+                    <!-- Card heading -->
+                    <h4 class="card-header"><i class="fas fa-question-circle"></i> What is this? </h4>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- Scripts -->
-    <script src="jquery-3.5.1.min.js"></script>
-    <script src="d3-5.16.0.min.js" charset="utf-8"></script>
-    <script type="text/javascript" src="sorting-algorithms-d3.js"></script>
+        <!-- Scripts -->
+        <script src="jquery-3.5.1.min.js"></script>
+        <script src="d3-5.16.0.min.js" charset="utf-8"></script>
+        <script type="text/javascript" src="sorting-algorithms-d3.js"></script>
 
 </body>
 
