small stylistic changes to webpage

--- a/web/index.html
+++ b/web/index.html
@@ -38,7 +38,8 @@
                 Algorithms </a> </h1>
         <hr class="my-4">
         <p>Created by <a href="https://github.com/Oliver-BE" target="_blank">Oliver Baldwin Edwards
-            </a>using <a href="https://github.com/devosoft/Empirical" target="_blank">Empirical's</a> D3-wrapper </p>
+            </a>and written in C++ using <a href="https://github.com/devosoft/Empirical" target="_blank">Empirical's</a>
+            D3-wrapper </p>
     </div>
 
     <!-- Main content -->
