--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
     <link rel="manifest" href="favicon_io/site.webmanifest">
+    <!-- This is just for the fancy github button in the info section -->
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
 
 <body>
@@ -71,20 +73,104 @@
             </div>
         </div>
 
+        <!-- TODO: add statistics card -->
+
         <!-- Row 2 -->
         <div class="row mb-2">
             <div class="col">
                 <div class="card">
                     <!-- Card heading -->
-                    <h4 class="card-header"><i class="fas fa-question-circle"></i> How was this made? </h4>
+                    <div class="card-header" id="info-card-header">
+                        <button class="btn btn-lg btn-block btn-light" type="button" data-toggle="collapse"
+                            data-target="#info-card" aria-expanded="true" aria-controls="info-card">
+                            <h4 style="cursor: pointer;" class="mb-0 text-left"><i class="fas fa-question-circle"></i>
+                                What is this? </h4>
+                        </button>
+                    </div>
+                    <!-- Card body -->
+                    <!-- TODO: add relevant text and link to blogpost -->
+                    <div id="info-card" class="collapse" aria-labelledby="info-card-header">
+                        <div class="card-body">
+                            <h4> Where can I learn more about this? </h4>
+                            <p> The paper associated with this site is probably a good starting point. It is currently
+                                available in
+                                <a href="https://peerj.com/preprints/27315/">preprint form</a> and is currently under
+                                review at a journal.
+                                If you want to know more than that, <a
+                                    href="http://emilyldolson.com/contact.html">contact me</a>! I love
+                                talking about this stuff.
+                            </p>
+                            <br>
+
+                            <h4> What settings did you use in the paper? </h4>
+                            <p>
+                                The settings used in the paper are the defaults on this page. I chose them somewhat
+                                arbitrarily and am
+                                currently working on characterizing them more systematically.
+                            </p>
+                            <br>
+
+                            <h4> What tools did you use to build this? </h4>
+                            <p>
+                                For full details, see <a
+                                    href="https://github.com/emilydolson/ecology_of_evolutionary_computation">the GitHub
+                                    repo
+                                    for this site</a>. In summary, though, I used:
+                                <li><a href="https://github.com/devosoft/Empirical">Empirical</a>: Using the Empirical
+                                    library I was able to easily
+                                    create two versions of the code for this project:
+                                    a fast one for research, and this interactive one for playing with ideas and sharing
+                                    with others. I wrote the
+                                    whole thing in C++ and compiled the research version
+                                    normally. This interactive version was compiled to highly efficient Javascript using
+                                    the <a href="https://github.com/kripken/emscripten">Emscripten compiler</a>. </li>
+                                <li><a href="https://getbootstrap.com">Bootstrap</a>: an open source web framework,
+                                    which I used to make this
+                                    website. </li>
+                                <li><a href="https://useiconic.com/open/">Open Iconic</a>: open source icons which I
+                                    used for the buttons on this
+                                    site. </li>
+                                <br>
+                                And of course my trusty laptop running <a href="https://linuxmint.com/">Linux Mint</a>.
+                            </p>
+
+                            <h4>Who else helped make this happen?</h4>
+                            <p>
+                                I'm very grateful to my collaborators, <a href="http://www.ofria.com">Charles Ofria</a>
+                                and <a href="http://www.cse.msu.edu/~banzhafw" />Wolfgang Banzhaf</a>, and to
+                                the MSU <a href="http://www.devolab.msu.edu">Digital Evolution Lab</a> for
+                                their input on this project and their work on the Empirical library, without which this
+                                site would not exist.
+                            </p>
+
+                            <h4>Who are you?</h4>
+                            <p>
+                                I'm a PhD student at Michigan State University studying evolution, ecology, and computer
+                                science. To learn more
+                                about my research, see <a href="http://www.emilyldolson.com"> my website</a>.
+                            </p>
+                        </div>
+                        <!-- Card footer -->
+                        <div class="card-footer">
+                            <a class="github-button" href="https://github.com/Oliver-BE" target="_blank"
+                                data-style="mega" aria-label="My Github">See more of my work on GitHub</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <!-- Scripts -->
-        <script src="jquery-3.5.1.min.js"></script>
-        <script src="d3-5.16.0.min.js" charset="utf-8"></script>
-        <script type="text/javascript" src="sorting-algorithms-d3.js"></script>
+            <!-- Scripts -->
+            <script src="jquery-3.5.1.min.js"></script>
+            <script src="d3-5.16.0.min.js" charset="utf-8"></script>
+            <!-- Boostrap stuff -->
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+                integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+                crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+                integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+                crossorigin="anonymous"></script>
+            <!-- C++ code compiled to JS -->
+            <script type="text/javascript" src="sorting-algorithms-d3.js"></script>
 
 </body>
 
