--- a/web/index.html
+++ b/web/index.html
@@ -66,17 +66,15 @@
                             <h4 class="card-header"><i class="fas fa-cog"></i> Controls! </h4>
                             <div id="buttons_div" class="p-2">
                                 <button id="bubble-sort-button" type="button" class="btn btn-primary btn-lg btn-block"
-                                    style="margin-top: 10px; margin-bottom: 10px;"
+                                    style="margin-top: 10px; margin-bottom: 10px; cursor: pointer;"
                                     onclick="emp.BubbleSortButton()">Bubble
                                     Sort</button>
                                 <!-- C++ code comes in here -->
                                 <div id="emp_controls"></div>
-                                <!-- TODO: make the slider inactive if bubble sort hasn't been clicked -->
-                                <!-- TODO: make the slider incrementable -->
+                                <hr>
                                 <button id="shuffle-button" type="button" class="btn btn-dark btn-lg btn-block"
-                                    style="margin-top: 10px; margin-bottom: 10px;"
+                                    style="margin-top: 10px; margin-bottom: 10px; cursor: pointer;"
                                     onclick="emp.ShuffleArrayButton()">Shuffle</button>
-
                             </div>
                         </div>
                     </div>
@@ -181,15 +179,36 @@
             </div>
 
             <!-- Scripts -->
-            <script src="jquery-3.5.1.min.js"></script>
+            <!-- <script src="jquery-3.5.1.min.js"></script> -->
             <script src="d3-5.16.0.min.js" charset="utf-8"></script>
             <!-- Boostrap stuff -->
+            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+                integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+                crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
                 integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
                 crossorigin="anonymous"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
                 integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
                 crossorigin="anonymous"></script>
+
+            <!-- Set up tool-tips for things other than interaction networks-->
+            <script>
+                add_tooltip = function (id, title) {
+                    var el = document.getElementById(id);
+                    el["title"] = title;
+                    el.setAttribute("data-toggle", "tooltip");
+                }
+
+                $(function () {
+                    $(document).ready(function () {
+                        // TODO: fix this from disappearing
+                        add_tooltip("bs_slider", "Slide to iterate over the swaps performed from start to finish");
+                        $('[data-toggle="tooltip"]').tooltip();
+                    });
+                });
+            </script>
+
             <!-- C++ code compiled to JS -->
             <script type="text/javascript" src="sorting-algorithms-d3.js"></script>
 
