--- a/web/index.html
+++ b/web/index.html
@@ -185,12 +185,12 @@
             </div>
 
             <!-- Scripts -->
-            <!-- <script src="jquery-3.5.1.min.js"></script> -->
+            <script src="jquery-3.5.1.min.js"></script>
             <script src="d3-5.16.0.min.js" charset="utf-8"></script>
             <!-- Boostrap stuff -->
-            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
                 integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-                crossorigin="anonymous"></script>
+                crossorigin="anonymous"></script> -->
             <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
                 integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
                 crossorigin="anonymous"></script>
