updated readme and added text to web app information section

--- a/web/index.html
+++ b/web/index.html
@@ -124,55 +124,45 @@
                     <!-- TODO: add relevant text and link to blogpost -->
                     <div id="info-card" class="collapse" aria-labelledby="info-card-header">
                         <div class="card-body">
-                            <h4> Where can I learn more about this? </h4>
-                            <p> The paper associated with this site is probably a good starting point. It is currently
-                                available in
-                                <a href="https://peerj.com/preprints/27315/">preprint form</a> and is currently under
-                                review at a journal.
-                                If you want to know more than that, <a
-                                    href="http://emilyldolson.com/contact.html">contact me</a>! I love
-                                talking about this stuff.
+                            <p>
+                                <b> This is a web app written entirely in C++ to show off the new <a
+                                        href="https://github.com/devosoft/Empirical" target="_blank">Empirical</a>
+                                    D3-wrapper that I worked on as a <a href="https://mmore500.com/waves/index.html"
+                                        target="_blank">WAVES
+                                        participant</a> during the summer of 2020.
+                                </b>
+                                <br>
+                                This project is meant to serve as a demo for how the new D3-wrapper can be used with
+                                Empirical to create powerful web
+                                apps.
                             </p>
                             <br>
-
-                            <h4> What tools did you use to build this? </h4>
                             <p>
-                                For full details, see <a
-                                    href="https://github.com/emilydolson/ecology_of_evolutionary_computation">the GitHub
-                                    repo
-                                    for this site</a>. In summary, though, I used:
-                                <li><a href="https://github.com/devosoft/Empirical">Empirical</a>: Using the Empirical
-                                    library I was able to easily
-                                    create two versions of the code for this project:
-                                    a fast one for research, and this interactive one for playing with ideas and sharing
-                                    with others. I wrote the
-                                    whole thing in C++ and compiled the research version
-                                    normally. This interactive version was compiled to highly efficient Javascript using
-                                    the <a href="https://github.com/kripken/emscripten">Emscripten compiler</a>. </li>
-                                <li><a href="https://getbootstrap.com">Bootstrap</a>: an open source web framework,
-                                    which I used to make this
-                                    website. </li>
-                                <li><a href="https://useiconic.com/open/">Open Iconic</a>: open source icons which I
-                                    used for the buttons on this
-                                    site. </li>
-                                <br>
-                                And of course my trusty laptop running <a href="https://linuxmint.com/">Linux Mint</a>.
+                                Along with <a href="https://github.com/elizabethcarney" target="_blank">Elizabeth
+                                    Carney</a>, <a href="https://lalejini.com/" target="_blank">Alex Lalejini</a>, and
+                                <a href="https://cse.msu.edu/~dolsonem/" target="_blank">Emily Dolson</a> I worked on
+                                creating a C++ wrapper for <a href="https://d3js.org/" target="_blank">D3.js</a>, a
+                                JavaScript library that allows for custom-made, interactive visualizations.
+
+                                We began the process of overhauling Empirical's web visualization support for use in the
+                                next version of <a href="https://avida-ed.msu.edu/" target="_blank">Avida-ED</a>.
                             </p>
-
-                            <h4>Who else helped make this happen?</h4>
+                            <br>
                             <p>
-                                I'm very grateful to my collaborators, <a href="http://www.ofria.com">Charles Ofria</a>
-                                and <a href="http://www.cse.msu.edu/~banzhafw" />Wolfgang Banzhaf</a>, and to
-                                the MSU <a href="http://www.devolab.msu.edu">Digital Evolution Lab</a> for
-                                their input on this project and their work on the Empirical library, without which this
-                                site would not exist.
+                                For more information on what I did, see <a href="https://mmore500.com/waves/blog.html"
+                                    target="_blank">this blogpost
+                                    I wrote</a>.
                             </p>
-
-                            <h4>Who are you?</h4>
+                            <hr>
                             <p>
-                                I'm a PhD student at Michigan State University studying evolution, ecology, and computer
-                                science. To learn more
-                                about my research, see <a href="http://www.emilyldolson.com"> my website</a>.
+                                <b>This web app contains:</b>
+                            <ul>
+                                <li> A slider to iterate through individual steps of a sorting algorithm</li>
+                                <li> A play button to speed through the remaining steps of a sorting algorithm</li>
+                                <li> A shuffle button to randomize the data</li>
+                                <li> A card containing live statistics pertaining to the number of swaps a sorting
+                                    algorithm has taken</li>
+                            </ul>
                             </p>
                         </div>
                         <!-- Card footer -->
