updating blog post links

--- a/web/index.html
+++ b/web/index.html
@@ -149,8 +149,9 @@
                             </p>
                             <br>
                             <p>
-                                For more information on what I did, see <a href="https://mmore500.com/waves/blog.html"
-                                    target="_blank">this blog post
+                                For more information on what I did, see <a
+                                    href="https://mmore500.com/waves/blog/d3-sorting.html" target="_blank">this blog
+                                    post
                                     I wrote</a>.
                             </p>
                             <hr>
